# AutoCM

./: .gitignore  Dockerfile  LICENSE  README.md  TECHNICAL_REPORT.md  docker-compose.yml
api/: engine_wrapper.py  main.py  requirements.txt  state_manager.py
api/core/: __init__.py  autonomy_logic.py  engine_wrapper.py  mock_physics_engine.py
api/routers/: maneuvers.py  rulebook_api.py  telemetry.py
core/: __init__.py  autonomy_logic.py  engine_wrapper.py
core/tests/: test_integration.py
dashboard/: index.html
dashboard/css/: panels.css
data/: catalog.json  generate_catalog.py  ground_stations.csv
engine/: CMakeLists.txt  bindings.cpp  build.sh  common.h  conjunction.cpp  conjunction.h  maneuver.cpp  maneuver.h  propagator.cpp  propagator.h
engine/tests/: test_conjunction_performance.cpp  test_propagator.cpp
frontend/: index.html
frontend/css/: animations.css  main.css
frontend/js/: alerts.js  api.js  bullseye.js  fuel.js  gantt.js  globe.js  main.js  state.js  telemetry.js  ws_telemetry.js
scripts/: inject_threat.js  run_tests.js  seed.js  tick.js
src/autonomy/: eolHandler.js  evasionPlanner.js  manager.js  recoveryPlanner.js
src/controllers/: constellationController.js  maneuverController.js  simulateController.js  telemetryController.js  visualizationController.js
src/data/: groundStations.js
src/physics/: interface.js
src/routes/: constellation.js  maneuver.js  simulate.js  telemetry.js  visualization.js
src/state/: alertStore.js  cdmStore.js  constellation.js  maneuverQueue.js  simClock.js
src/utils/: orbital.js
tests/: test_api.py  test_physics.py
